videoAnnotation.css
.videoView, .commentsView, .videoInfo, .tickmarkView{
	position: absolute;
	top: 5px;
}
.videoView, .videoContainer, .videoInfo, .videoMenu{
	width: 752px;
}

.videoContainer{
	max-height: 423px;
}

#videoCover{
	position: absolute;
	width: 100%;
	height: 423px;
	top: 0px;
	overflow: hidden;
}

#drawnRect{
	position: relative;
	width: 0px;
	height: 0px;
	background: yellow;
	opacity: .3;
	top: 0px;
	border-radius: 5px;
}
.videoMenu{
	max-width: 742px;
	padding: 5px;
	height:50px;
	background: #E6E6E6;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}

.playORpause_holder, .progressbar_container, .muteORunmute_holder{
	display:inline-block;
}
.playORpause_holder, .muteORunmute_holder{
	width: 35px;
}

.progressbar_container{
	position:relative;
	width: 660px;
	height: 10px;
	top: 8px;
	margin-bottom: 13px;
	border-bottom-right-radius: 0px;
	border-bottom-left-radius: 0px;
}

#progressbar{
	position: relative;
	width:100%; 
	height: 15px;
	border-top-right-radius: 5px;
	border-top-left-radius: 5px;
	opacity: .7;
	border: solid 1px #B5AF9F;
	overflow: hidden;

}

#progressbar_filler{
	position: relative;
	width: 0%;
	max-width: 100%;
	height: 100%;
	background: #D1D1D1;
	border-right: solid 1px #B5AF9F;
}

#dragRangeContainer{
	position: absolute;
	width: 660px;
	height:16px;
	background: white;
	border-top-right-radius: 5px;
	border-top-left-radius: 5px;
	top: 0px;
	border: solid 1px #B5AF9F;
	border-bottom: none;
	overflow: hidden;
}
#rangeTick{
	position: relative;
	height: 100%;
	display: none;
	width: 2px;
	background: red;
}
.tickmark_holder{
	position: relative;
	width: 660px;
	height: 4px;
	margin-bottom: 6px;
	background: white;
	border: solid 1px #B5AF9F;
	border-top: none;
	border-bottom-right-radius: 5px;
	border-bottom-left-radius: 5px;

}

.tickmark{
	position: absolute;
	height: 100%;
	background: red;
	opacity: .4;
}

#showTime{
	text-align: right;	
	height: 100%;
}

#videoTimeDisplay, #videoTotalTimeDisplay{
	display: inline-block;
}

.commentsView{
	left: 765px;
	width: 300px;
	height: 480px;
	margin-top:2px; 
	border-radius: 5px;
	overflow: hidden;
	border-bottom: solid 1px #E6E6E6;
}

.commentsView_menu{
	background: #E6E6E6;
	border-radius: 5px;
	padding: 5px;
	margin-bottom: 5px;

}

#submit_btn, #cancel_btn{
	margin-bottom: 4px;
}
.commentsView_holder{
	font-size: 8pt;
	overflow: auto;
	background: #E6E6E6;
	height: 444px;
	border-radius: 5px;
}

.commentsView_newComment{
	padding: 5px;
	background: #E6E6E6;
	height: 150px;
	border-radius: 5px;
	margin-bottom: 5px;
	overflow: scroll;
}

#comment_time, #comment_timeEnd{
	width: 32px;
}
.newCommentTextbox{
	width: 94%;
	resize: none;
}

#commentTimeShow{
	font-size: 7pt;
	color: grey;
}

#commentTimeShow:hover{
	text-decoration:underline;
}

#accordion .ui-accordion-content {
	max-height: 100px;
	overflow-y: auto;
}

.videoInfo{
	top: 470px;
}

.tickmark, #progressbar, #commentTimeShow{
	cursor: pointer;
}
#progressbar, #commentTimeShow{
	cursor: pointer;
}

